--- a/.github/workflows/md-to-pdf.yml
+++ b/.github/workflows/md-to-pdf.yml
@@ -123,13 +123,21 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+
+        # 检查是否有 PDF 文件
+        if ! ls ${{ env.PDF_DIR }}/*.pdf 1> /dev/null 2>&1; then
+          echo "No PDF files found"
+          exit 0
+        fi
+
         git add ${{ env.PDF_DIR }}/*.pdf
-        
+
         # 检查是否有文件需要提交
         if git diff --staged --quiet; then
           echo "No changes to commit"
           exit 0
         fi
-        
+
         git commit -m "Auto-generated PDFs from Markdown [skip ci]"
+        git pull --rebase
         git push
