--- a/.github/workflows/ocr-images.yml
+++ b/.github/workflows/ocr-images.yml
@@ -186,13 +186,21 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+
+        # 检查是否有文本文件
+        if ! ls ${{ env.TEXT_DIR }}/*.txt 1> /dev/null 2>&1; then
+          echo "No text files found"
+          exit 0
+        fi
+
         git add ${{ env.TEXT_DIR }}/*.txt
-        
+
         # Check if there are files to commit
         if git diff --staged --quiet; then
           echo "No changes to commit"
           exit 0
         fi
-        
+
         git commit -m "Auto-generated OCR text from images [skip ci]"
+        git pull --rebase
         git push
