修复 PDF 转换和 OCR 工作流
- 添加 --wrap=preserve 保留换行
- 添加字体大小和行间距变量
- 修复模板中的 listparindent 命令
- 添加数学公式支持
- 修改 OCR 工作流默认处理所有图片

--- a/.github/workflows/md-to-pdf.yml
+++ b/.github/workflows/md-to-pdf.yml
@@ -74,11 +74,14 @@ jobs:
               -V linkcolor=blue \
               -V urlcolor=blue \
               -V toccolor=blue \
+              -V fontsize=12pt \
+              -V linestretch=1.2 \
               -M date="$(date +'%Y年%m月%d日')" \
               -M author="自动生成" \
               --toc \
               --toc-depth=3 \
-              -N
+              -N \
+              --wrap=preserve
 
             echo "Generated: $pdf_file"
           fi
