--- a/.github/workflows/ocr.yml
+++ b/.github/workflows/ocr.yml
@@ -65,50 +65,7 @@ jobs:
             if [ -f "$img" ]; then
               filename=$(basename "$img" | sed 's/\.[^.]*$//')
               echo "Processing: $filename"
-              
-              # Use Python to process the image
-              python3 << PYTHON_SCRIPT
-import base64
-import json
-import subprocess
-import sys
-
-# Read and encode image
-with open('$img', 'rb') as f:
-    image_data = base64.b64encode(f.read()).decode('utf-8')
-
-# Create request
-request = {
-    "base64": image_data,
-    "options": {
-        "tbpu.parser": "multi_para"
-    }
-}
-
-# Save request to file
-with open('/tmp/request.json', 'w', encoding='utf-8') as f:
-    json.dump(request, f, ensure_ascii=False)
-
-# Call API
-result = subprocess.run([
-    'curl', '-s', '-X', 'POST', 'http://localhost:1224/api/ocr',
-    '-H', 'Content-Type: application/json',
-    '-d', '@/tmp/request.json'
-], capture_output=True, text=True)
-
-# Parse response
-try:
-    response = json.loads(result.stdout)
-    ocr_text = response.get('data', '')
-except:
-    ocr_text = ''
-
-# Save result
-with open('texts/${filename}.txt', 'w', encoding='utf-8') as f:
-    f.write(ocr_text)
-
-print(f"Saved: texts/${filename}.txt")
-PYTHON_SCRIPT
+              python3 scripts/ocr.py "$img" "texts/${filename}.txt"
             fi
           done
       
@@ -119,50 +76,7 @@ PYTHON_SCRIPT
             if [ -f "$img" ]; then
               filename=$(basename "$img" | sed 's/\.[^.]*$//')
               echo "Processing: $filename"
-              
-              # Use Python to process the image
-              python3 << PYTHON_SCRIPT
-import base64
-import json
-import subprocess
-import sys
-
-# Read and encode image
-with open('$img', 'rb') as f:
-    image_data = base64.b64encode(f.read()).decode('utf-8')
-
-# Create request
-request = {
-    "base64": image_data,
-    "options": {
-        "tbpu.parser": "multi_para"
-    }
-}
-
-# Save request to file
-with open('/tmp/request.json', 'w', encoding='utf-8') as f:
-    json.dump(request, f, ensure_ascii=False)
-
-# Call API
-result = subprocess.run([
-    'curl', '-s', '-X', 'POST', 'http://localhost:1224/api/ocr',
-    '-H', 'Content-Type: application/json',
-    '-d', '@/tmp/request.json'
-], capture_output=True, text=True)
-
-# Parse response
-try:
-    response = json.loads(result.stdout)
-    ocr_text = response.get('data', '')
-except:
-    ocr_text = ''
-
-# Save result
-with open('texts/${filename}.txt', 'w', encoding='utf-8') as f:
-    f.write(ocr_text)
-
-print(f"Saved: texts/${filename}.txt")
-PYTHON_SCRIPT
+              python3 scripts/ocr.py "$img" "texts/${filename}.txt"
             fi
           done
       
